[gd_scene load_steps=5 format=3 uid="uid://c5h5ow130d3p8"]

[ext_resource type="Theme" uid="uid://d2vfdeuycvrrh" path="res://themes/container_theme.tres" id="1_5f47s"]
[ext_resource type="Theme" uid="uid://e0ko5wbqflma" path="res://themes/title_theme.tres" id="2_kebx2"]
[ext_resource type="Script" path="res://options_menu.gd" id="2_pdoex"]
[ext_resource type="Theme" uid="uid://0mcaptcoklj2" path="res://themes/subtitle_theme.tres" id="3_s6jy7"]

[node name="OptionsMenu" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -78.5
offset_right = 130.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5f47s")
script = ExtResource("2_pdoex")

[node name="OptionsLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_kebx2")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("3_s6jy7")
text = "Volume
"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="FullscreenToggle" type="CheckBox" parent="."]
layout_mode = 2
theme = ExtResource("3_s6jy7")
text = "Fullscreen
"
alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_5f47s")

[node name="CancelButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme = ExtResource("3_s6jy7")
text = "Cancel"

[node name="AcceptButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme = ExtResource("3_s6jy7")
text = "Accept
"

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="ButtonContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ButtonContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
